<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B31f292e"
    >

    <LinearLayout
        android:id="@+id/layout_bcsh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcsh"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="63" />
            <TextView
                android:id="@+id/text_bcsh_brightness_num"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/contrast"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/contrast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1992"
                android:progress="1000" />
            <TextView
                android:id="@+id/text_bcsh_contrast_num"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/saturation"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/saturation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1992"
                android:progress="1000" />
            <TextView
                android:id="@+id/text_bcsh_saturation_num"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tone"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/tone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="60"
                android:progress="30" />
            <TextView
                android:id="@+id/text_bcsh_tone_num"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hdr"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <!-- 最大亮度 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/max_brightness"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/seekbar_max_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="800" />
            <TextView
                android:id="@+id/text_progress_max_brightness"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <!-- 最小亮度 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/min_brightness"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/seekbar_min_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000" />
            <TextView
                android:id="@+id/text_progress_min_progress"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <!-- 亮度 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/seekbar_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000" />
            <TextView
                android:id="@+id/text_brightness_num"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <!-- 饱和度 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/saturation"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/seekbar_saturation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000" />
            <TextView
                android:id="@+id/text_saturation_num"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdr"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <!-- 最大亮度 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/max_brightness"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/seekbar_sdr_max_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="950" />
            <TextView
                android:id="@+id/text_sdr_progress_max_brightness"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>

        <!-- 最小亮度 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/min_brightness"
                android:textColor="@color/green" />
            <SeekBar
                android:id="@+id/seekbar_sdr_min_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />
            <TextView
                android:id="@+id/text_sdr_progress_min_progress"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp" >
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/ok" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/bcsh_reset" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp" >
        <Button
            android:id="@+id/btn_cold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bcsh_cold" />
        <Button
            android:id="@+id/btn_warm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/bcsh_warm" />
        <Button
            android:id="@+id/btn_sharp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/bcsh_sharp" />
    </LinearLayout>
</LinearLayout>
